--- a/index.html
+++ b/index.html
@@ -45,11 +45,13 @@
 
     <footer>
       <hr>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="adopt.html">Adopt a Pet</a></li>
-        <li><a href="about.html">About Us</a></li>
-      </ul>
+      <div>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="adopt.html">Adopt a Pet</a></li>
+          <li><a href="about.html">About Us</a></li>
+        </ul>
+      </div>
       <p>Copyright Charlie's Chance Animal Rescue 2017</p>
       <p>For more information...&nbsp;<strong><a href="mailto:info@charlieschance.org">send us an email&excl;</a></strong></p>
     </footer>
