fixed nav kinda

--- a/adopt.html
+++ b/adopt.html
@@ -13,20 +13,18 @@
   <body>
     <div id="wrapper">
     <header>
-      <class="logo"><img src="extra/logo.png"></class>
+      <div class="logo"><img src="extra/logo.png"></div>
       <h1>Charlie's Chance Animal Rescue</h1>
       <h4>Finding Furry Friends Forever Homes Since 2004</h4>
 
     </header>
 
     <nav>
-      <hr>
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="adopt.html">Adopt a Pet</a></li>
           <li><a href="about.html">About Us</a></li>
         </ul>
-      <hr>
     </nav>
 
     <main>
@@ -117,10 +115,10 @@
 
       <h2><b><a href="adopt.html">Adopt Today!</a></b></h2>
 
+      <hr>
     </main>
 
     <footer>
-      <hr>
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="adopt.html">Adopt a Pet</a></li>
