--- a/index.html
+++ b/index.html
@@ -11,19 +11,17 @@
   <body>
     <div id="wrapper">
     <header>
-      <class="logo"><img src="extra/logo.png"></class>
-      <h1>Charlie's Chance<br>Animal Rescue</h1>
+      <div class="logo"><img src="extra/logo.png"></div>
+      <h1>Charlie's Chance Animal Rescue</h1>
       <h4>Finding Furry Friends Forever Homes Since 2004</h4>
     </header>
 
     <nav>
-      <hr>
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="adopt.html">Adopt a Pet</a></li>
           <li><a href="about.html">About Us</a></li>
         </ul>
-      <hr>
     </nav>
 
     <main>
@@ -40,11 +38,10 @@
         <!--
         To animal rescue news: http://www.humanesociety.org/news/animal_rescue_response_dispatches.html, http://theanimalrescuesite.greatergood.com/clickToGive/ars/stories, https://www.huffingtonpost.com/entry/are-animal-shelter-outcomes-improving_us_58cfff2ae4b0537abd957323  -->
       </div>
-
+      <hr>
     </main>
 
     <footer>
-      <hr>
       <div>
         <ul>
           <li><a href="index.html">Home</a></li>
