--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
         </ul>
     </nav>
 
+    <div class="banner">
+
+      <img src="extra/mainbanner.jpg" alt="cat and dog">
+
+    </div>
+
     <main>
       <h2><b>Our Mission</b></h2>
       <p>We here at Charlie's Chance Animal Rescue are dedicated to giving every animal a chance to find home. We are a non-profit, no kill-animal shelter, providing a home for our animals until they find a home with you.</p>
