--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 
       <div class="rescueVideo">
         <!-- https://youtu.be/jc5XQSVeQ2c -->
+        <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/jc5XQSVeQ2c" allowfullscreen></iframe> -->
       </div>
       <div class="rescueLinks">
         <!--
