--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
   <body>
     <div id="wrapper">
     <header>
-      <div class="logo"><img src="extra/logo.png"></div>
+      <div class="logo">
+        <img src="extra/logo.png" alt="Charlie's Chance Logo">
+      </div>
       <h1>Charlie's Chance Animal Rescue</h1>
       <h3>Finding Furry Friends Forever Homes Since 2004</h3>
     </header>
@@ -24,13 +26,21 @@
         </ul>
     </nav>
 
-    <div class="banner">
+    <!-- <div class="banner">
 
       <img src="extra/mainbanner.jpg" alt="cat and dog">
 
-    </div>
+    </div> -->
 
     <main>
+
+      <div class="banner">
+
+        <img src="extra/mainbanner.jpg" alt="cat and dog">
+
+      </div>
+
+
       <h2><b>Our Mission</b></h2>
       <p>We here at Charlie's Chance Animal Rescue are dedicated to giving every animal a chance to find home. We are a non-profit, no kill-animal shelter, providing a home for our animals until they find a home with you.</p>
       <h3>Take a chance by giving an animal a chance at living and loving happily ever after.</h3>
@@ -59,7 +69,6 @@
       <p>Copyright Charlie's Chance Animal Rescue 2017</p>
       <p>For more information...&nbsp;<strong><a href="mailto:info@charlieschance.org">send us an email&excl;</a></strong></p>
     </footer>
-  </div>
   </body>
 
 </html>
