fixed banner kinda

--- a/index.html
+++ b/index.html
@@ -26,19 +26,13 @@
         </ul>
     </nav>
 
-    <!-- <div class="banner">
+    <div class="banner">
 
-      <img src="extra/mainbanner.jpg" alt="cat and dog">
+      <!-- <img src="extra/mainbanner.jpg" alt="cat and dog"> -->
 
-    </div> -->
+    </div>
 
     <main>
-
-      <div class="banner">
-
-        <img src="extra/mainbanner.jpg" alt="cat and dog">
-
-      </div>
 
 
       <h2><b>Our Mission</b></h2>
