--- a/adopt.html
+++ b/adopt.html
@@ -35,6 +35,8 @@
 
     <!-- DOGS -->
 
+    <div class="computerPets">
+
     <table>
       <caption>Meet our cuddly canines!</caption>
       <thead>
@@ -71,9 +73,56 @@
         </tr>
       </tbody>
     </table>
+  </div>
+
+    <div class="tabletPets">
+      <table>
+        <caption>Meet our cuddly canines!</caption>
+        <thead>
+          <tr>
+            <th colspan="4">Dogs</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td rowspan="2" class="pet"><img src="dogs/brunothumb.jpg" alt="Bruno the dog">Bruno</td>
+            <td>Male</td>
+            <td rowspan="2" class="pet"><img src="dogs/picklesthumb.jpg" alt="Pickles the dog">Pickles</td>
+            <td>Female</td>
+            <td rowspan="2" class="pet"><img src="dogs/loraxthumb.jpg" alt="Lorax the dog">Lorax</td>
+            <td>Male</td>
+          </tr>
+          <tr>
+            <td>Adult</td>
+            <td>Puppy</td>
+          </tr>
+          <tr>
+            <td rowspan="2" class="pet"><img src="dogs/loraxthumb.jpg" alt="Lorax the dog">Lorax</td>
+            <td>Male</td>
+            <td rowspan="2" class="pet"><img src="dogs/mabelthumb.jpg" alt="Mabel the dog">Mabel</td>
+            <td>Female</td>
+          </tr>
+          <tr>
+            <td>Adult</td>
+            <td>Senior</td>
+          </tr>
+          <tr>
+            <td rowspan="2" class="pet"><img src="dogs/ziggythumb.jpg" alt="Ziggy the dog">Ziggy</td>
+            <td>Male</td>
+            <td rowspan="2" class="pet"><img src="dogs/josephinethumb.jpg" alt="Josephine the dog">Josephine</td>
+            <td>Female</td>
+          </tr>
+          <tr>
+            <td>Adult</td>
+            <td>Adult</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
 
     <!-- CATS -->
 
+    <div class="computerPets">
     <table>
       <caption>Meet our friendly felines!</caption>
       <thead>
@@ -111,6 +160,50 @@
       </tbody>
     </table>
 
+    </div>
+
+    <div class="tabletPets">
+      <table>
+        <caption>Meet our friendly felines!</caption>
+        <thead>
+          <tr>
+            <th colspan="6">Cats</th>
+        </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td rowspan="2" class="pet"><img src="cats/donutthumb.jpg" alt="Donut the cat">Donut</td>
+            <td>Male</td>
+            <td rowspan="2" class="pet"><img src="cats/socksthumb.jpg" alt="Socks the cat">Socks</td>
+            <td>Female</td>
+          </tr>
+          <tr>
+            <td>Kitten</td>
+            <td>Adult</td>
+          </tr>
+          <tr>
+            <td rowspan="2" class="pet"><img src="cats/ferdinandthumb.jpg" alt="Ferdinand the cat">Ferdinand</td>
+            <td>Male</td>
+            <td rowspan="2" class="pet"><img src="cats/esmeraldathumb.jpg" alt="Esmeralda the cat">Esmeralda</td>
+            <td>Female</td>
+          </tr>
+          <tr>
+            <td>Senior</td>
+            <td>Adult</td>
+          </tr>
+          <tr>
+            <td rowspan="2" class="pet"><img src="cats/percythumb.jpg" alt="Percy the cat">Percy</td>
+            <td>Male</td>
+            <td rowspan="2" class="pet"><img src="cats/tacothumb.jpg" alt="Taco the cat">Taco</td>
+            <td>Female</td>
+          </tr>
+          <tr>
+            <td>Adult</td>
+            <td>Adult</td>
+            <td>Kitten</td>
+          </tr>
+        </tbody>
+      </table>
     </div>
 
       <h2><b><a href="adopt.html">Adopt Today!</a></b></h2>
