about page work
form for links and pictures added with flex box

--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
       <h2><b>Our Story</b></h2>
       <div class="aboutCharlieImages"><p>
         <img src="extra/aboutpuppy.jpg">&nbsp;
-      <img src="extra/banner.jpg"></p>
+        <img src="extra/aboutadult.jpg"></p>
     </div>
       <p>Charlie's Chance Animal Rescue was founded in memory of Charlie. Charlie was a stray puppy, born on the Caribbean island St. Croix. It would seem that there would be no chance he could have a different life. But fate stepped in on all four feet. He was rescued and brought to the greater Philadelphia area and adopted by his furever family. He went from living in the streets to getting love and treats.</p>
 
@@ -37,12 +37,28 @@
       <hr>
 
       <div class="about-info">
-
+        <div>
         <h2>Our Team</h2>
-        <h2>About Animal Rescue</h2>
-        <h2>Our Volunteers</h2>
-
+        <img src="extra/staff.jpg" alt="our staff member with a dog">
       </div>
+      <div>
+        <h2>About Animal Rescue</h2>
+        <table>
+          <tr>
+            <th>Resource Links</th>
+          </tr>
+          <tr>
+            <td><a href="http://animalrescuecorps.org">Animal Rescue Corps</a></td>
+          </tr>
+          <tr><td><a href="https://www.learningtogive.org/resources/animal-shelters"></a>Shelters | Learning to Give</td>
+          </tr>
+        </table>
+      </div>
+      <div>
+        <h2>Our Volunteers</h2>
+        <img src="extra/volunteer.jpg" alt="a volunteer holding a kitten">
+      </div>
+    </div>
 
       <hr>
 
