--- a/adopt.html
+++ b/adopt.html
@@ -75,7 +75,7 @@
     </table>
   </div>
 
-    <div class="tabletPets">
+    <div class="tabletPets tablet">
       <table>
         <caption>Meet our cuddly canines!</caption>
         <thead>
@@ -160,7 +160,7 @@
 
     </div>
 
-    <div class="tabletPets">
+    <div class="tabletPets tablet">
       <table>
         <caption>Meet our friendly felines!</caption>
         <thead>
