fixed up hr and wrapper issue

--- a/about.html
+++ b/about.html
@@ -41,17 +41,21 @@
         <h2>Our Team</h2>
         <img src="extra/staff.jpg" alt="our staff member with a dog">
       </div>
-      <div>
+      <div class="about-table">
         <h2>About Animal Rescue</h2>
         <table>
+          <thead>
           <tr>
             <th>Resource Links</th>
           </tr>
+        </thead>
+        <tbody>
           <tr>
             <td><a href="http://animalrescuecorps.org">Animal Rescue Corps</a></td>
           </tr>
-          <tr><td><a href="https://www.learningtogive.org/resources/animal-shelters"></a>Shelters | Learning to Give</td>
+          <tr><td><a href="https://www.learningtogive.org/resources/animal-shelters">Shelters | Learning to Give</a></td>
           </tr>
+        </tbody>
         </table>
       </div>
       <div>
