links in about table

--- a/about.html
+++ b/about.html
@@ -51,9 +51,9 @@
         </thead>
         <tbody>
           <tr>
-            <td><a href="http://animalrescuecorps.org">Animal Rescue Corps</a></td>
+            <td><a href="http://animalrescuecorps.org" target="_blank">Animal Rescue Corps</a></td>
           </tr>
-          <tr><td><a href="https://www.learningtogive.org/resources/animal-shelters">Shelters | Learning to Give</a></td>
+          <tr><td><a href="https://www.learningtogive.org/resources/animal-shelters" target="_blank">Shelters | Learning to Give</a></td>
           </tr>
         </tbody>
         </table>
