swtich logo to id

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <div id="wrapper">
     <header>
-      <div class="logo">
+      <div id="logo">
         <img src="extra/logo.png" alt="Charlie's Chance Logo">
       </div>
       <h1>Charlie's Chance Animal Rescue</h1>
