--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
   <body>
     <div id="wrapper">
     <header>
-      <div class="logo"><img src="extra/logo.png" alt="Charlie's Chance Logo"></div>
+      <div id="logo"><img src="extra/logo.png" alt="Charlie's Chance Logo"></div>
       <h1>Charlie's Chance Animal Rescue</h1>
       <h3>Finding Furry Friends Forever Homes Since 2004</h3>
     </header>
