added video organizing css table edits

--- a/adopt.html
+++ b/adopt.html
@@ -165,7 +165,7 @@
         <caption>Meet our friendly felines!</caption>
         <thead>
           <tr>
-            <th colspan="6">Cats</th>
+            <th colspan="4">Cats</th>
         </tr>
         </thead>
         <tbody>
@@ -201,6 +201,11 @@
           </tr>
         </tbody>
       </table>
+    </div>
+
+    <div class="mobilePets">
+      <!-- either cartoon or repeat of Bruno and Donut just one photo no name  -->
+
     </div>
 
       <h2><b><a href="adopt.html">Adopt Today!</a></b></h2>
