--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <div class="banner">
 
-      
+
 
     </div>
 
@@ -41,9 +41,9 @@
       <hr>
       <h2><b><a href="adopt.html">Adopt Today!</a></b></h2>
 
-      <div class="rescueVideo">
+      <div id="rescueVideo">
         <!-- https://youtu.be/jc5XQSVeQ2c -->
-        <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/jc5XQSVeQ2c" allowfullscreen></iframe> -->
+        <iframe width="420" height="236" src="https://www.youtube.com/embed/jc5XQSVeQ2c" allowfullscreen></iframe>
       </div>
       <div class="rescueLinks">
         <!--
