--- a/index.html
+++ b/index.html
@@ -42,12 +42,29 @@
       <h2><b><a href="adopt.html">Adopt Today!</a></b></h2>
 
       <div id="rescueVideo">
-        <!-- https://youtu.be/jc5XQSVeQ2c -->
         <iframe width="480" height="270" src="https://www.youtube.com/embed/jc5XQSVeQ2c" allowfullscreen></iframe>
       </div>
       <div class="rescueLinks">
-        <!--
-        To animal rescue news: http://www.humanesociety.org/news/animal_rescue_response_dispatches.html, http://theanimalrescuesite.greatergood.com/clickToGive/ars/stories, https://www.huffingtonpost.com/entry/are-animal-shelter-outcomes-improving_us_58cfff2ae4b0537abd957323  -->
+        <div class="rescue-table">
+          <table border="">
+            <thead>
+            <tr>
+              <th>Animal Rescue News</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td><a href="http://www.humanesociety.org/news/animal_rescue_response_dispatches.html" target="_blank">Animal Rescue Corps</a><br><p>Read the top stories from the HSUS Animal Rescue Team, or watch animal rescue videos</p></td>
+            </tr>
+            <tr>
+              <td><a href="http://theanimalrescuesite.greatergood.com/clickToGive/ars/stories" target="_blank">The Animal Rescue Site | Stories</a><br><p>Our most inspiring stories come from you, our clickers. We love hearing about your rescued, adopted, beloved pets. Please click the button below to share your story with the world!</p></td>
+            </tr>
+            <tr>
+              <td><a href="https://www.huffingtonpost.com/entry/are-animal-shelter-outcomes-improving_us_58cfff2ae4b0537abd957323" target="_blank">The Huffington Post | Animal Shelter Outcomes Are Improving</a><br><p>by Matt Bershadker - President & CEO, ASPCA</p></td>  
+            </tr>
+          </tbody>
+        </table>
+        </div>
       </div>
       <hr>
     </main>
