added table to rescue video

--- a/index.html
+++ b/index.html
@@ -41,8 +41,15 @@
       <hr>
       <h2><b><a href="adopt.html">Adopt Today!</a></b></h2>
 
-      <div id="rescueVideo">
-        <iframe width="480" height="270" src="https://www.youtube.com/embed/jc5XQSVeQ2c" allowfullscreen></iframe>
+      <div class="rescueVideo">
+        <table>
+          <tr><th>Animal Rescue Video</th>
+          </tr>
+
+        <tr>
+          <td><iframe width="480" height="270" src="https://www.youtube.com/embed/jc5XQSVeQ2c" allowfullscreen></iframe></td>
+          </tr>
+        </table>
       </div>
       <div class="rescueLinks">
         <div class="rescue-table">
@@ -60,7 +67,7 @@
               <td><a href="http://theanimalrescuesite.greatergood.com/clickToGive/ars/stories" target="_blank">The Animal Rescue Site | Stories</a><br><p>Our most inspiring stories come from you, our clickers. We love hearing about your rescued, adopted, beloved pets. Please click the button below to share your story with the world!</p></td>
             </tr>
             <tr>
-              <td><a href="https://www.huffingtonpost.com/entry/are-animal-shelter-outcomes-improving_us_58cfff2ae4b0537abd957323" target="_blank">The Huffington Post | Animal Shelter Outcomes Are Improving</a><br><p>by Matt Bershadker - President & CEO, ASPCA</p></td>  
+              <td><a href="https://www.huffingtonpost.com/entry/are-animal-shelter-outcomes-improving_us_58cfff2ae4b0537abd957323" target="_blank">The Huffington Post | Animal Shelter Outcomes Are Improving</a><br><p>by Matt Bershadker - President & CEO, ASPCA</p></td>
             </tr>
           </tbody>
         </table>
