media qs mobile logo and mobile charlie pic

--- a/about.html
+++ b/about.html
@@ -12,7 +12,12 @@
   <body>
     <div id="wrapper">
     <header>
-      <div id="logo"><img src="extra/logo.png" alt="Charlie's Chance Logo"></div>
+      <div id="logo">
+        <img src="extra/logo.png" alt="Charlie's Chance Logo">
+      </div>
+      <div id="mobile-logo">
+        <img src="extra/logomobile.png" alt="Charlie's Chance Logo">
+      </div>
       <h1>Charlie's Chance Animal Rescue</h1>
       <h3>Finding Furry Friends Forever Homes Since 2004</h3>
     </header>
@@ -28,9 +33,12 @@
     <main>
       <h2><b>Our Story</b></h2>
       <div class="aboutCharlieImages"><p>
-        <img src="extra/aboutpuppy.jpg">&nbsp;
-        <img src="extra/aboutadult.jpg"></p>
+        <img src="extra/aboutpuppy.jpg" alt="Charlie as a newly rescued puppy">&nbsp;
+        <img src="extra/aboutadult.jpg" alt="Charlie as an adult in his forever home"></p>
     </div>
+    <div class="mobile-aboutCharlieImages">
+        <img src="extra/aboutpuppymobile.jpeg" alt="Charlie as a newly rescued puppy">
+      </div>
       <p>Charlie's Chance Animal Rescue was founded in memory of Charlie. Charlie was a stray puppy, born on the Caribbean island St. Croix. It would seem that there would be no chance he could have a different life. But fate stepped in on all four feet. He was rescued and brought to the greater Philadelphia area and adopted by his furever family. He went from living in the streets to getting love and treats.</p>
 
       <h3 style="text-align: center;">We at Charlie's Chance Animal Rescue believe <span class="emph">every</span> animal should have a chance like Charlie.</h3>
