--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
       <div id="logo">
         <img src="extra/logo.png" alt="Charlie's Chance Logo">
       </div>
+      <div id="mobile-logo">
+        <img src="extra/logomobile.png" alt="Charlie's Chance Logo">
+      </div>
       <h1>Charlie's Chance Animal Rescue</h1>
       <h3>Finding Furry Friends Forever Homes Since 2004</h3>
     </header>
