--- a/adopt.html
+++ b/adopt.html
@@ -13,7 +13,12 @@
   <body>
     <div id="wrapper">
     <header>
-      <div id="logo"><img src="extra/logo.png"></div>
+      <div id="logo">
+        <img src="extra/logo.png">
+      </div>
+      <div id="mobile-logo">
+        <img src="extra/logomobile.png" alt="Charlie's Chance Logo">
+      </div>
       <h1>Charlie's Chance Animal Rescue</h1>
       <h3>Finding Furry Friends Forever Homes Since 2004</h3>
 
@@ -27,8 +32,6 @@
         </ul>
     </nav>
     <main>
-
-    <!-- I want to get the pet name to float on top of the image of the pet but I am not sure if this is actually the best way to have the pets subpage organized anyway -->
 
     <!-- DOGS -->
 
