lots of media qs

--- a/index.html
+++ b/index.html
@@ -30,10 +30,8 @@
     </nav>
 
     <div class="banner">
-
-
-
     </div>
+    <div class="mobile-banner"></div>
 
     <main>
 
@@ -56,7 +54,7 @@
       </div>
       <div class="rescueLinks">
         <div class="rescue-table">
-          <table border="">
+          <table>
             <thead>
             <tr>
               <th>Animal Rescue News</th>
@@ -76,6 +74,11 @@
         </table>
         </div>
       </div>
+      <div class="mobile-rescue">
+      <h3>Animal Rescue Video</h3>
+      <iframe width="240" height="135" src="https://www.youtube.com/embed/jc5XQSVeQ2c" allowfullscreen></iframe>
+      <h3><a href="http://theanimalrescuesite.greatergood.com/clickToGive/ars/stories">Click for Animal Rescue News</a></h3>
+    </div>
       <hr>
     </main>
 
