added blog media qs

--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
       <hr>
       <h2><b><a href="adopt.html">Adopt Today!</a></b></h2>
 
+      <div class="home-content">
+      <div class="rescue">
       <div class="rescueVideo">
         <table>
           <tr><th>Animal Rescue Video</th>
@@ -78,7 +80,23 @@
       <h3>Animal Rescue Video</h3>
       <iframe width="240" height="135" src="https://www.youtube.com/embed/jc5XQSVeQ2c" allowfullscreen></iframe>
       <h3><a href="http://theanimalrescuesite.greatergood.com/clickToGive/ars/stories">Click for Animal Rescue News</a></h3>
+      <h3><a href="index.html">Click for Our Blog</a></h3>
     </div>
+  </div>
+  <div class="blog">
+    <table>
+      <tr>
+        <th>I got adopted!</th>
+      </tr>
+      <tr>
+        <td><img src="extra/featuredadopted.jpg" alt="Ivy the dog and her person Amanda"></td>
+    </tr>
+    <tr>
+      <td>Our furry friend Ivy found her forever home with Amanda and the her family. <a href="index.html">Click here to read more of their story!</a></td>
+    </tr>
+  </table>
+  </div>
+</div>
       <hr>
     </main>
 
