--- a/about.html
+++ b/about.html
@@ -114,7 +114,7 @@
         <li><a href="about.html">About Us</a></li>
       </ul>
       <p>Copyright Charlie's Chance Animal Rescue 2017</p>
-      <p>For more information...&nbsp;<strong><a href="mailto:info@charlieschance.org">send us an email&excl;</a></strong></p>
+      <p>For more information email us at<strong><a href="mailto:info@charlieschance.org"></a></strong></p>
     </footer>
   </div>
   </body>
