--- a/index.html
+++ b/index.html
@@ -108,8 +108,10 @@
           <li><a href="about.html">About Us</a></li>
         </ul>
       </div>
+      <div class="extra-footer">
       <p>Copyright Charlie's Chance Animal Rescue 2017</p>
-      <p>For more information...&nbsp;<strong><a href="mailto:info@charlieschance.org">send us an email&excl;</a></strong></p>
+      <p>For more information email us at<strong><a href="mailto:info@charlieschance.org">charlieschance.org</a></strong></p>
+    </div>
     </footer>
   </body>
 
