--- a/about.html
+++ b/about.html
@@ -108,13 +108,17 @@
     </main>
 
     <footer>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="adopt.html">Adopt a Pet</a></li>
-        <li><a href="about.html">About Us</a></li>
-      </ul>
+      <div>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="adopt.html">Adopt a Pet</a></li>
+          <li><a href="about.html">About Us</a></li>
+        </ul>
+      </div>
+      <div class="extra-footer">
       <p>Copyright Charlie's Chance Animal Rescue 2017</p>
-      <p>For more information email us at<strong><a href="mailto:info@charlieschance.org"></a></strong></p>
+      <p>For more information email us at<strong><a href="mailto:info@charlieschance.org">charlieschance.org</a></strong></p>
+    </div>
     </footer>
   </div>
   </body>
