fade not working just will do color change for now

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </header>
 
     <nav>
-        <ul>
+        <ul class="fade">
           <li><a href="index.html">Home</a></li>
           <li><a href="adopt.html">Adopt a Pet</a></li>
           <li><a href="about.html">About Us</a></li>
@@ -102,7 +102,7 @@
 
     <footer>
       <div>
-        <ul>
+        <ul class="fade">
           <li><a href="index.html">Home</a></li>
           <li><a href="adopt.html">Adopt a Pet</a></li>
           <li><a href="about.html">About Us</a></li>
