think of idea for the big adopt today thing

--- a/adopt.html
+++ b/adopt.html
@@ -207,11 +207,30 @@
     </div>
 
     <div class="mobilePets">
-      <!-- either cartoon or repeat of Bruno and Donut just one photo no name  -->
+      <table>
+        <tr>
+          <th>Our Dogs</th>
+        </tr>
+        <tr>
+          <td><img src="dogs/brunothumb.jpg" alt="Bruno the dog"></td>
+        </tr>
+      </table>
+      <table>
+        <tr>
+          <th>Our Cats</th>
+        </tr>
+        <tr>
+          <td>
+            <img src="cats/donutthumb.jpg" alt="Donut the cat">
+          </td>
+        </tr>
+      </table>
 
     </div>
 
-      <h2><b><a href="adopt.html">Adopt Today!</a></b></h2>
+      <hr>
+
+      <h2><b><a id="adoptlink" href="adopt.html">Adopt Today!</a></b></h2>
 
       <hr>
     </main>
