--- a/about.html
+++ b/about.html
@@ -43,6 +43,8 @@
 
       <h3 style="text-align: center;">We at Charlie's Chance Animal Rescue believe <span class="emph">every</span> animal should have a chance like Charlie.</h3>
       <hr>
+      <h2><b><a id="adoptlink" href="adopt.html">Adopt Today!</a></b></h2>
+      <hr>
 
       <div class="about-info">
         <div>
