special adopt link button

--- a/adopt.html
+++ b/adopt.html
@@ -228,11 +228,14 @@
 
     </div>
 
-      <hr>
+    <hr>
 
-      <h2><b><a id="adoptlink" href="adopt.html">Adopt Today!</a></b></h2>
+    <div id="adoptlink">
+      <h2><b><a href="adopt.html">adopt today!</a></b></h2>
+    </div>
 
-      <hr>
+    <hr>
+
     </main>
 
     <footer>
