--- a/index.html
+++ b/index.html
@@ -37,8 +37,10 @@
 
 
       <h2><b>Our Mission</b></h2>
+      <div class="centered">
       <p>We here at Charlie's Chance Animal Rescue are dedicated to giving every animal a chance to find home. We are a non-profit, no kill-animal shelter, providing a home for our animals until they find a home with you.</p>
-      <h3 style="text-align: center;">Take a chance by giving an animal a chance at living and loving happily ever after.</h3>
+      <h3>Take a chance by giving an animal a chance at living and loving happily ever after.</h3>
+    </div>
 
       <hr>
 
@@ -98,7 +100,8 @@
         <td><img src="extra/featuredadopted.jpg" alt="Ivy the dog and her person Amanda"></td>
     </tr>
     <tr>
-      <td>Our furry friend Ivy found her forever home with Amanda and the her family. <a href="index.html">Click here to read more of their story!</a></td>
+      <td><p>Our furry friend Ivy found her forever home with Amanda and her family. She is now enjoying life on their farm instead of on the streets of Camden, NJ.</p>
+        <a href="index.html">Click here to read more of their story on the Charlie's Chance blog!</a></td>
     </tr>
   </table>
   </div>
