--- a/adopt.html
+++ b/adopt.html
@@ -14,7 +14,7 @@
     <div id="wrapper">
     <header>
       <div id="logo">
-        <img src="extra/logo.png">
+        <img src="extra/logo.png" alt="Charlie's Chance Logo">
       </div>
       <div id="mobile-logo">
         <img src="extra/logomobile.png" alt="Charlie's Chance Logo">
