--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
           </tbody>
         </table>
         </div>
+
       </div>
       <div class="mobile-rescue">
       <h3>Animal Rescue Video</h3>
@@ -91,7 +92,12 @@
       <h3><a href="index.html">Click for Our Blog</a></h3>
     </div>
   </div>
+
+  <!-- <div id="tabletrule">
+    <hr>
+  </div> -->
   <div class="blog">
+
     <table>
       <tr>
         <th>I got adopted!</th>
@@ -119,9 +125,9 @@
       </div>
       <div class="extra-footer">
       <p>Copyright Charlie's Chance Animal Rescue 2017&copy;</p>
-      <p>For more information, email us at <strong><a href="mailto:info@charlieschance.org">charlieschance.org</a></strong></p>
-    </div>
+      <p>For more information, email us at <strong><a href="mailto:info@charlieschance.org">charlieschance.org</a></strong></p></div>
     </footer>
+    </div>
   </body>
 
 </html>
