--- a/adopt.html
+++ b/adopt.html
@@ -6,8 +6,7 @@
     <meta charset="utf-8">
     <title>Charlie's Chance: Our Pets</title>
     <link href="style.css" rel="stylesheet" type="text/css">
-    <meta name="viewport"
-content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   </head>
 
