--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           </tr>
 
         <tr>
-          <td><iframe width="480" height="270" src="https://www.youtube.com/embed/jc5XQSVeQ2c" allowfullscreen></iframe></td>
+          <td><iframe width="560" height="315" src="https://www.youtube.com/embed/jc5XQSVeQ2c" allowfullscreen></iframe></td>
           </tr>
         </table>
       </div>
@@ -107,7 +107,7 @@
         <td><img src="extra/featuredadopted.jpg" alt="Ivy the dog and her person Amanda"></td>
     </tr>
     <tr>
-      <td><p>Our furry friend Ivy found her forever home with Amanda and her family. She is now enjoying life on their farm instead of on the streets of Camden, NJ.</p>
+      <td><p>Our furry friend Ivy found her forever home with Amanda and her family. She is now enjoying life on their farm instead of on the streets of Camden.</p>
         <a href="index.html">Click here to read more of their story on the Charlie's Chance blog!</a></td>
     </tr>
   </table>
