--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
     </header>
 
     <nav>
-        <ul>
+        <ul class="fadenav">
           <li><a href="index.html">Home</a></li>
           <li><a href="adopt.html">Adopt a Pet</a></li>
           <li><a href="about.html">About Us</a></li>
@@ -118,7 +118,7 @@
 
     <footer>
       <div>
-        <ul>
+        <ul class="fadefoot">
           <li><a href="index.html">Home</a></li>
           <li><a href="adopt.html">Adopt a Pet</a></li>
           <li><a href="about.html">About Us</a></li>
