--- a/index.html
+++ b/index.html
@@ -7,19 +7,6 @@
     <title>Charlie's Chance Animal Rescue</title>
     <link href="style.css" rel="stylesheet" type="text/css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-    .nav-fade li {
-   padding: 3px 8px;
-   display: inline-block;
-   transition: background .25s ease-in-out;
-   -moz-transition: background .25s ease-in-out;
-   -webkit-transition: background .25s ease-in-out;
-   }
-
-   .nav-fade li:hover {
-      background: #783721;
-      }
-    </style>
   </head>
 
   <body>
@@ -36,7 +23,7 @@
     </header>
 
     <nav>
-        <ul class="nav-fade">
+        <ul class="fadenav">
           <li><a href="index.html">Home</a></li>
           <li><a href="adopt.html">Adopt a Pet</a></li>
           <li><a href="about.html">About Us</a></li>
@@ -145,7 +132,7 @@
 
     <footer>
       <div>
-        <ul class="fade">
+        <ul class="fadefoot">
           <li><a href="index.html">Home</a></li>
           <li><a href="adopt.html">Adopt a Pet</a></li>
           <li><a href="about.html">About Us</a></li>
