guess I can live with weird links home

--- a/about.html
+++ b/about.html
@@ -32,9 +32,9 @@
 
     <main>
       <h2><b>Our Story</b></h2>
-      <div class="aboutCharlieImages"><p>
-        <img src="extra/aboutpuppy.jpg" alt="Charlie as a newly rescued puppy">&nbsp;
-        <img src="extra/aboutadult.jpg" alt="Charlie as an adult in his forever home"></p>
+      <div class="aboutCharlieImages">
+        <img src="extra/aboutpuppy.jpg" alt="Charlie as a newly rescued puppy">
+        <img src="extra/aboutadult.jpg" alt="Charlie as an adult in his forever home">
     </div>
     <div class="mobile-aboutCharlieImages">
         <img src="extra/aboutpuppymobile.jpeg" alt="Charlie as a newly rescued puppy">
