--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           </thead>
           <tbody>
             <tr>
-              <td><a href="http://www.humanesociety.org/news/animal_rescue_response_dispatches.html" target="_blank">Animal Rescue Corps</a><br><p>Read the top stories from the HSUS Animal Rescue Team, or watch animal rescue videos</p></td>
+              <td><a href="http://www.humanesociety.org/news/animal_rescue_response_dispatches.html" target="_blank">The Humane Society: Animal Rescue News Team</a><br><p>Read the top stories from the HSUS Animal Rescue Team, or watch animal rescue videos</p></td>
             </tr>
             <tr>
               <td><a href="http://theanimalrescuesite.greatergood.com/clickToGive/ars/stories" target="_blank">The Animal Rescue Site | Stories</a><br><p>Our most inspiring stories come from you, our clickers. We love hearing about your rescued, adopted, beloved pets. Please click the button below to share your story with the world!</p></td>
@@ -102,7 +102,7 @@
 
     <table>
       <tr>
-        <th>I got adopted!</th>
+        <th>I got adopted! - Ivy</th>
       </tr>
       <tr>
         <td><img src="extra/featuredadopted.jpg" alt="Ivy the dog and her person Amanda"></td>
@@ -116,7 +116,7 @@
   <div class="tablet-blog">
     <table>
       <tr>
-        <th>I got adopted!</th>
+        <th>I got adopted! - Ivy</th>
       </tr>
       <tr>
         <td><img src="extra/featuredadoptedtablet.jpg" alt="Ivy the dog and her person Amanda"></td>
