fine tuning just appearance of code

--- a/about.html
+++ b/about.html
@@ -107,9 +107,9 @@
         <textarea name="comments" id="comments" rows="7" cols="35"></textarea>
       </fieldset>
 
-      <input type="submit" value="Submit" id="button">
+      <input type="submit" value="Submit" class="button">
       &nbsp;
-      <input type="reset" value="Reset" id="button">
+      <input type="reset" value="Reset" class="button">
 
     </form>
   </div>
