--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
       <h2><b>Our Mission</b></h2>
       <div class="centered">
-      <p>We here at Charlie's Chance Animal Rescue are dedicated to giving every animal a chance to find home. We are a non-profit, no kill-animal shelter, providing a home for our animals until they find a home with you.</p>
+      <p>We here at <strong>Charlie's Chance Animal Rescue</strong> are dedicated to giving every animal a chance to find home. We are a non-profit, no kill-animal shelter, providing a home for our animals until they find a home with you.</p>
       <h3>Take a chance by giving an animal a chance at living and loving happily ever after.</h3>
     </div>
 
@@ -95,9 +95,7 @@
     </div>
   </div>
 
-  <!-- <div id="tabletrule">
-    <hr>
-  </div> -->
+
   <div class="blog">
 
     <table>
