all tables okay

--- a/about.html
+++ b/about.html
@@ -32,10 +32,12 @@
 
     <main>
       <h2><b>Our Story</b></h2>
-      <div class="aboutCharlieImages">
+      <div class="echoBorder">
+        <div class="aboutCharlieImages">
         <img src="extra/aboutpuppy.jpg" alt="Charlie as a newly rescued puppy">
         <img src="extra/aboutadult.jpg" alt="Charlie as an adult in his forever home">
     </div>
+  </div>
     <div class="mobile-aboutCharlieImages">
         <img src="extra/aboutpuppymobile.jpeg" alt="Charlie as a newly rescued puppy">
       </div>
@@ -83,7 +85,10 @@
 
       <hr>
 
-      <div>
+      <div class="echoForm">
+        <table>
+          <tr>
+            <td>
         <form method="post" action="http://webdevbasics.net/scripts/demo.php">
       <h3>Sign up for our newsletter!</h3>
 
@@ -112,6 +117,9 @@
       <input type="reset" value="Reset" class="button">
 
     </form>
+  </td>
+</tr>
+</table>
   </div>
   <hr>
     </main>
