--- a/index.html
+++ b/index.html
@@ -88,10 +88,15 @@
 
       </div>
       <div class="mobile-rescue">
-      <h3>Animal Rescue Video</h3>
-      <iframe width="240" height="135" src="https://www.youtube.com/embed/jc5XQSVeQ2c" allowfullscreen></iframe>
+        <table><tr>
+      <th>Animal Rescue Media</th></tr>
+      <tr>
+        <td>
+          <h3>Animal Rescue Video</h3>
+          <iframe width="240" height="135" src="https://www.youtube.com/embed/jc5XQSVeQ2c" allowfullscreen></iframe>
       <h3><a href="http://theanimalrescuesite.greatergood.com/clickToGive/ars/stories">Click for Animal Rescue News</a></h3>
       <h3><a href="index.html">Click for Our Blog</a></h3>
+    </td></tr></table>
     </div>
   </div>
 
